test/testcases/malgo/error/NeedSpaceDot.mlg
module {..} = import "../../../../runtime/malgo/Builtin.mlg"
module {..} = import "../../../../runtime/malgo/Prelude.mlg"

def succ = { x -> addInt32 x 1 }

def main = {
  Prelude.putStrLn "Hello, world!";
  Prelude.printInt32 <| (succ.succ) 1
                     --  ^^^^^^^^^
}

